# python_lite

./: CMakeLists.txt  ISSUE_TEMPLATE.md  LICENSE  README.md
src/: api.c  api.h  bind.c  bind.h  config.c  config.h  debug.c  debug.h  gc.c  gc.h  intp.c  intp.h  io.c  io.h  lexer.c  lexer.h  misc.c  misc.h  parser.c  parser.h  parser_ext.c  shell.c  state.c  state.h  utils.c  utils.h  vm.c  vm.h
src/lib/: cmstr.c  cmstr.h  khash.h  khash_obj.c  khash_obj.h  klist.h  kvec.h  platform.c  platform.h  utf8_lite.c  utf8_lite.h
src/mods/: _io.c  builtin.c  builtin.h  cio.c  cio.h  helper.c  helper.h  io.c  io.h  math.c  math.h  mods.h  os.c  os.h  pltypes.c  pltypes.h  sys.c  sys.h  unusualm.c  unusualm.h
src/pybind/: bind.c  bind.h  common.c  common.h  extra.c  extra.h  object.h  typebind.c  typebind.h
src/types/: all.h  bool.c  bool.h  bytes.c  bytes.h  code.c  code.h  codesnippet.c  codesnippet.h  custom.c  custom.h  dict.c  dict.h  func.c  func.h  function.c  function.h  iter.c  iter.h  list.c  list.h  module.c  module.h  none.c  none.h  number.c  number.h  object.c  object.h  objectE.c  objectE.h  property.c  property.h  set.c  set.h  string.c  string.h  tuple.c  tuple.h  type.c  (+3 more)
src/types/common/: bool.c  bool.h  bytes.c  bytes.h  dict.c  dict.h  list.c  list.h  number.c  number.h  set.c  set.h  string.c  string.h  tuple.c  tuple.h  type.c  type.h  unusual.c  unusual.h
src/types/extra/: code.c  code.h  cpointer.c  cpointer.h  exception.c  exception.h  function.c  function.h  iter.c  iter.h  module.c  module.h  none.c  none.h  property.c  property.h  range.c  range.h
src/utils/: config.c  config.h  debug.c  debug.h  fs.c  fs.h  io.c  io.h  io_crt.c  io_crt.h  io_simple.c  io_simple.h  misc.c  misc.h  ref.c  ref.h  static.c  static.h  watch.c  watch.h  with_exceptions.c  with_exceptions.h
tests/: pylite.cmd  test_grammar.py
tests/basic/: test_1_if.py
tests/grammar/: test_1_basetype.py  test_2_short_stmt.py  test_3_logic.py  test_4_func.py  test_5_class.py  test_6_except.py
(+9 files in other folders)
